opam-version: "1.2"
version: "dev"
maintainer: [
  "Paul Laforgue <paul.laforgue123@gmail.com>"
]
authors: [
  "Paul Laforgue"
]
homepage: "https://github.com/phink/changeset"
doc: "https://github.com/phink/changeset"
dev-repo: "https://github.com/phink/changeset.git"
bug-reports: "https://github.com/phink/changeset/issues"
license: "MIT"

depends: [
]

available: [
  ocaml-version >= "4.04.2"
]

build: [
  ["jbuilder" "build" "-p" name "-j" jobs]
]
